--- a/SteamVR-WebKit-Test/packages.config
+++ b/SteamVR-WebKit-Test/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cef.redist.x64" version="3.2987.1601" targetFramework="net462" />
-  <package id="cef.redist.x86" version="3.2987.1601" targetFramework="net462" />
-  <package id="CefSharp.Common" version="57.0.0" targetFramework="net462" />
-  <package id="CefSharp.OffScreen" version="57.0.0" targetFramework="net462" />
-  <package id="OpenTK" version="3.0.0-pre" targetFramework="net462" />
+  <package id="cef.redist.x64" version="75.1.14" targetFramework="net462" />
+  <package id="cef.redist.x86" version="75.1.14" targetFramework="net462" />
+  <package id="CefSharp.Common" version="75.1.142" targetFramework="net462" />
+  <package id="CefSharp.OffScreen" version="75.1.142" targetFramework="net462" />
+  <package id="OpenTK" version="3.1.0" targetFramework="net462" />
 </packages>
